# UmaVPN-Checker

./: .gitignore  .gitmodules  NATIVE_RUNTIME_CHECKLIST.md  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: OpenVpn2Jni.cpp  OpenVpnJni.cpp  openvpn2_entry.c
app/src/main/java/com/umavpn/checker/: MainActivity.kt  UmaVpnViewModel.kt
app/src/main/java/com/umavpn/checker/data/: AppCatalogRepository.kt  AppSelectionStore.kt  FavouritesStore.kt  UmaVpnApi.kt  UmaVpnRepository.kt  VpnPreferencesStore.kt
app/src/main/java/com/umavpn/checker/receivers/: DeviceBootReceiver.kt
app/src/main/java/com/umavpn/checker/ui/: ConnectionScreen.kt  ScrollbarModifier.kt  SettingsScreen.kt  UmaVpnCheckerApp.kt  UmaVpnRootApp.kt
app/src/main/java/com/umavpn/checker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/umavpn/checker/vpn/: EngineType.kt  OpenVpn2NativeBridge.kt  OpenVpnNativeBridge.kt  UmaVpnService.kt  VpnConfigParser.kt  VpnController.kt  VpnRuntime.kt  VpnState.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
scripts/: auto-commit-push-release.ps1  bootstrap-openvpn-native-deps.ps1  build-debug.ps1  build-install-run.ps1  common.ps1  install-debug.ps1  logcat.ps1  run-app.ps1  run-scrcpy.ps1
